# Static-Memory

./: .gitignore  AGENTS.md  Cargo.toml  README.md  fix.sh  fix_clippy.sh  install.ps1  install.sh  patch_all.sh  test_log.rs  test_rotation.db-shm  test_rotation.db-wal  test_script.sh  uninstall.ps1  uninstall.sh  update_readme.sh
.jules/: adapter.md  bolt.md  cartographer.md  innovator.md  inspector.md  logger.md  packager.md
docs/: architecture.md  usage.md
src/: collectors.rs  engine.rs  lib.rs  main.rs  storage.rs
src/collector/: keyboard.rs  mod.rs  system.rs  window.rs
src/engine/: buffer.rs  mod.rs  tests.rs
src/models/: mod.rs
src/os/: ipc.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/storage/: db.rs  mod.rs
src/ui/: app.rs  mod.rs
src/ui/components/: dashboard.rs  mod.rs  modals.rs  status_bar.rs
tests/: test_integration.rs
