[package]
name = "static-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# TUI
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Data Structures & Efficiency
smallvec = "1.13"
smol_str = { version = "0.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System & OS
sysinfo = "0.30"
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2.21"
evdev = "0.12"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
